--- a/maven-example/pom.xml
+++ b/maven-example/pom.xml
@@ -6,7 +6,14 @@
     <version>6.10-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Simple Multi Modules Build</name>
-
+    <licenses>
+     <license>
+      <name>Apache License, Version 2.0</name>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+      <comments>A business-friendly OSS license</comments>
+     </license>
+    </licenses>
     <modules>
         <module>multi1</module>
         <module>multi2</module>
